Changed table generation strategy

--- a/Main.html
+++ b/Main.html
@@ -10,19 +10,20 @@
     </head>
     <body>
         <h1 id="headLine">Town of Salem Role Tracker</h1>
-        <table id="mainTable">
-            <tr>
-                <th>Player</th>
-                <th>Role</th>
-                <th>Confirmed?</th>
-            </tr>
-        </table>
-        <br>
-        <table id="resultsTable">
-            <tr>
-                <th>Role Alignment</th>
-                <th>Player</th>
-            </tr>
-        </table>
+        <div id="tableWrapper">
+            <table id="mainTable">
+                <tr>
+                    <th>Player</th>
+                    <th>Role</th>
+                    <th>Confirmed?</th>
+                </tr>
+            </table>
+            <table id="resultsTable">
+                <tr>
+                    <th>Role Alignment</th>
+                    <th>Player</th>
+                </tr>
+            </table>
+        </div>
     </body>
 </html> 
