Added tracking of dead citizens

--- a/Main.html
+++ b/Main.html
@@ -17,6 +17,7 @@
                     <th>Player</th>
                     <th>Role</th>
                     <th>Confirmed?</th>
+                    <th>Dead?</th>
                 </tr>
             </table>
             <table id="resultsTable">
