Added a table of unclaimed players

--- a/Main.html
+++ b/Main.html
@@ -11,7 +11,7 @@
     <body>
         <h1 id="headLine">Town of Salem Role Tracker</h1>
         <div id="tableWrapper">
-            <table id="mainTable">
+            <table id="mainTable" class="tableClass">
                 <tr>
                     <th>#</th>
                     <th>Player</th>
@@ -20,9 +20,14 @@
                     <th>Dead?</th>
                 </tr>
             </table>
-            <table id="resultsTable">
+            <table id="resultsTable" class="tableClass">
                 <tr>
                     <th>Role Alignment</th>
+                    <th>Player</th>
+                </tr>
+            </table>
+            <table id="unclaimedTable" class="tableClass">
+                <tr>
                     <th>Player</th>
                 </tr>
             </table>
